[package]
name = "ramp_template"
version = "0.1.0"
edition = "2021"
description = "Ramp Template"
license = "BSD-3-Clause"
repository = "https://github.com/EllaCouch20/ramp_template.git"
authors = ["Ella Couch <ella@orange.me>"]

[dependencies]
pelican = {path="../pelican", package="pelican_ui"} #"0.2.8"
roost = {version="2.0.3", package="roost_ui"} #"0.2.8"
include_dir = "0.7.4"
serde = "1.0.228"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "time", "net"] }

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]

[package.metadata.android]
package = "com.orange.pkg"
build_targets = [ "aarch64-linux-android" ]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.sdk]
min_sdk_version = 33
target_sdk_version = 33
label = "Application Name"

[package.metadata.deb]
maintainer-scripts = "debian/"
